Update contact details

--- a/news/2018-03-15-poc.md
+++ b/news/2018-03-15-poc.md
@@ -153,6 +153,6 @@ The next steps will include:
 ## Getting involved
 
 As any API, the openAPI will only become good and useful if it is being used, and it needs testing by a wide audience. We are now at the stage of designing it, but at the point where large chunks are useful already. If you want to contribute to any of this, please do not hesitate and contact us e.g. by
-* expressing interest, for instance [here](https://github.com/Open-EO/discuss/issues)
+* expressing interest
 * writing GitHub issues wherever you think it is appropriate
-* sending an [email](mailto:openeo@list.tuwien.ac.at)
+* sending an [email](mailto:openeo.psc@uni-muenster.de)
